--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		</div>
 
 		<footer class="mt-5 p-3 text-center bg-light">
-			MicroPosts @copy;
+			MicroPosts &copy;
 		</footer>
 
 		<script src="build/app.bundle.js"></script>
